plugins {
    id 'org.springframework.boot' version '2.6.7'
    id "io.freefair.lombok" version "6.5.0.2"
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
}

group = 'com.swozo'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = "18"
targetCompatibility = "18"

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    flatDir {
        dir '../swozo-commons/build/libs'
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.7'
    implementation 'com.google.cloud:google-cloud-compute:1.9.1'
    implementation 'org.jetbrains:annotations:20.1.0'
    implementation 'org.postgresql:postgresql:42.3.4'
    implementation project(":swozo-commons")

    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'com.h2database:h2:2.1.214'

    implementation('org.mapstruct:mapstruct:1.5.1.Final')
    compileOnly('org.mapstruct:mapstruct-processor:1.5.1.Final')
    annotationProcessor('org.mapstruct:mapstruct-processor:1.5.1.Final')
}

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}

tasks.withType(JavaExec) {
    jvmArgs += ['--enable-preview', '-Duser.timezone=UTC']
}

tasks.named('test') {
    jvmArgs += '--enable-preview'
    useJUnitPlatform()
}

jar {
    enabled = false
}

bootJar {
    archiveFileName = 'orchestrator.jar'
}